--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="lib" path="/home/ajay/cometCloud/cometWorkflow08052015/dist/cometWorkflow.jar"/>
 	<classpathentry kind="lib" path="/home/ajay/cometCloud/cometWorkflow08052015/lib/Programming5.jar"/>
 	<classpathentry kind="lib" path="/home/ajay/cometCloud/cometWorkflow08052015/lib/CometCloud.jar"/>
