--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Cometcloud"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/CometWorkflow"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Bio"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
